--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="utf-8">
   <base href="/">
-  <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="author" content="Joerg <isageek> Krause (c) 2017" />
+  <meta name="author" content="Joerg <isageek> Krause (c) 2017-2019" />
   <title>SVOGV Demo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
