create new test bed

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <!-- Root Component of SVOGV App -->
+  <!-- Root Component of SVOGV Demo App -->
   <app-root>Loading Demo...</app-root>
 </body>
 </html>
