--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body class="container">
   <!-- Root Component of SVOGV Demo App -->
   <app-root>Loading Demo...</app-root>
 </body>
