--- a/src/documentation/miscellaneous/typealiases.html
+++ b/src/documentation/miscellaneous/typealiases.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>svogv-demo documentation</title>
+        <title>SVOGV 0.9 Documentation</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -14,7 +14,7 @@
     <body>
 
         <div class="navbar navbar-default navbar-fixed-top visible-xs">
-            <a href="../" class="navbar-brand">svogv-demo documentation</a>
+            <a href="../" class="navbar-brand">SVOGV 0.9 Documentation</a>
             <button type="button" class="btn btn-default btn-menu ion-ios-menu" id="btn-menu"></button>
         </div>
 
@@ -150,7 +150,7 @@
             </tr>
             <tr>
                 <td class="col-md-4">
-                    <div class="io-description"><p>This elements describes the grouping of elements in fieldset-controls. Each
+                    <div class="io-description"><p>This element describes the grouping of elements in fieldset-controls. Each
 field that is decorated in an DisplayGroup with the very same name is grouped
 into that part. The name appears in the fieldsets legend-control. The
 description makes a tooltip. If there are more groups the order is controlled
