--- a/src/documentation/interfaces/DatagridStyles.html
+++ b/src/documentation/interfaces/DatagridStyles.html
@@ -65,6 +65,13 @@
             <code>projects/svogv/src/lib/widgets/datagrid/models/datagridstyle.model.ts</code>
         </p>
 
+            <p class="comment">
+                <h3>Description</h3>
+            </p>
+            <p class="comment">
+                <p>All styleable parts of the grid.</p>
+
+            </p>
 
 
         <section>
@@ -477,6 +484,9 @@
     <div class="tab-pane fade  tab-source-code" id="c-source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">export type StyleRules &#x3D; { [name: string]: string };
 
+/**
+ * All styleable parts of the grid.
+ */
 export interface DatagridStyles {
   first?: StyleRules;
   middle?: StyleRules;
