--- a/src/documentation/modules/SvogvModule.html
+++ b/src/documentation/modules/SvogvModule.html
@@ -142,7 +142,7 @@
             <h3>Description</h3>
         </p>
         <p class="comment">
-            <p>The actual SVOGV Module definition using the root module.</p>
+            <p>The actual SVOGV Module definition.</p>
 
         </p>
 
@@ -243,7 +243,7 @@ const SVOGV_COMPONENTS &#x3D; [
 const provider &#x3D; [FormValidatorService]; // , FormValidatorFromJsonService];
 
 /**
- * The actual SVOGV Module definition using the root module.
+ * The actual SVOGV Module definition.
  */
 @NgModule({
   imports: [CommonModule, RouterModule, ReactiveFormsModule, FormsModule],
