Update deps to Angular 11

--- a/src/documentation/interfaces/FormValidatorModel.html
+++ b/src/documentation/interfaces/FormValidatorModel.html
@@ -160,7 +160,7 @@ export type readonlyType &#x3D; {
  * * boolean: boolean: &amp;lt;input type&#x3D;&quot;checkbox&quot;&amp;gt;
  * * number: number: &amp;lt;input type&#x3D;&quot;number&quot;&amp;gt;
  *
- * This is the formatting that&#x27;s autoamtically applied. The template hint goes after and can change any of these values.
+ * This is the formatting that&#x27;s automatically applied. The template hint goes after and can change any of these values.
  * The allows values are:
  *
  * * any: textarea: &amp;lt;textarea&amp;gt;
