--- a/src/documentation/miscellaneous/typealiases.html
+++ b/src/documentation/miscellaneous/typealiases.html
@@ -449,7 +449,7 @@ in the field. This may not work for specific controls, such as list boxes.</p>
 <li>boolean: boolean: &lt;input type=&quot;checkbox&quot;&gt;</li>
 <li>number: number: &lt;input type=&quot;number&quot;&gt;</li>
 </ul>
-<p>This is the formatting that&#39;s autoamtically applied. The template hint goes after and can change any of these values.
+<p>This is the formatting that&#39;s automatically applied. The template hint goes after and can change any of these values.
 The allows values are:</p>
 <ul>
 <li>any: textarea: &lt;textarea&gt;</li>
