--- a/src/documentation/index.html
+++ b/src/documentation/index.html
@@ -66,7 +66,7 @@
 <p>As of version 0.6 none known issues. Please report issues through Github.</p>
 <p>Have you worked with the version 0.3 before? 0.6 has breaking changes because of a new build process.
 <strong>In 0.7 I have again made significant changes towards the 1.0 release.</strong>
-I&#39;m using Angular CLI for all steps and sync the version with Angular (Angular 6 is SVGOV 0.6, Angular 7 is SVGOV 0.7, and so on). After the first final is being release I plan to jump the version to match the Angular major release. Hence, 0.6 is 6, 0.7 is 7 and if I could move to 1.0 and at that time Angular 9 is out, it will become SVOGV 9.</p>
+I&#39;m using Angular CLI for all steps and sync the version with Angular (Angular 6 is SVGOV 0.6, Angular 7 is SVGOV 0.7, and so on). After the first final is being release I plan to jump the version to match the Angular major release. Hence, 0.6 is 6, 0.7 is 7 and so on. Currently supporting Angular 11.</p>
 <h2 id="angular-data-annotations">Angular Data Annotations</h2>
 <p>The idea of data annotations is somehow heavily inspired by the namespace <code>System.ComponentModel.DataAnnotations</code> of .NET Core. There is absolutely no dependency at all, though. You can find more <a href="https://docs.microsoft.com/de-de/dotnet/api/system.componentmodel.dataannotations?view=netframework-4.8">here</a>.</p>
 <p>The basic idea is that we usually use view models anyway. So, why not using them to provide all information necessary to create a form that way?</p>
@@ -404,7 +404,7 @@ export class EditUserComponent implements OnInit {
 <h2 id="licensing">Licensing?</h2>
 <p>It&#39;s ISC licensed and it&#39;s free. I deeply believe in Open Source and will support the ecosystem by open sourcing all parts of the project. For commercial users such as enterprises I have support options.</p>
 <h3 id="about-the-author">About the Author</h3>
-<p>The SVOGV Widget Library was written by Joerg <isageek> Krause, <a href="https://www.joergkrause.de">www.joergkrause.de</a>, Berlin / Germany. He has many years of experience with Web-Frameworks. He were in the business in the early JavaScript days, know every single bit in jQuery and learnt a lot about Knockout, Angular, and Durandal. But time goes on. So he moved almost all projects to either AngularJS or Angular 2+. He thinks that knowing one Framework really well is more for our customers than knowing a lot just good. So he decided to do more and start contributing to the Angular ecosystem by creating awesome libraries and components.</p>
+<p>The SVOGV Widget Library was written by Joerg <isageek> Krause, <a href="https://www.joergkrause.de">www.joergkrause.de</a>, Berlin / Germany. He has many years of experience with Web-Frameworks. He were in the business in the early JavaScript days, know every single bit in jQuery and learnt a lot about Knockout, Angular, and React. But time goes on. So he moved almost all projects to either AngularJS or Angular 2+. He thinks that knowing one Framework really well is more for our customers than knowing a lot just good. So he decided to do more and start contributing to the Angular ecosystem by creating awesome libraries and components.</p>
 <h2 id="can-one-contribute">Can one contribute?</h2>
 <p>Yes, drop me an email with some &quot;about me&quot; stuff. Even simple feedback is appreciated.</p>
 <p><img src="https://github.com/joergkrause/svogv/blob/master/guides/logo_big.png?raw=true" alt="" class="img-responsive"></p>
