--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,12 @@
   <meta charset="utf-8">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="author" content="Joerg <isageek> Krause (c) 2017-2019" />
-  <title>SVOGV Demo</title>
+  <meta name="author" content="Joerg <isageek> Krause (c) 2017-2021" />
+  <title>SVOGV Final Grid</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body class="container">
-  <!-- Root Component of SVOGV Demo App -->
+<body class="d-flex flex-column h-100">
   <app-root>Loading Demo...</app-root>
 </body>
 </html>
